# fobos

./: .gitignore  README.md  addTheseFeatures.txt  releasefilelist.txt  requirements-pynq.txt
analysis/: attack_flow.m  find_no_of_samples.m  process_raw_power_trace.m  raw_data_collect.m
clock_fault_injection/: FOBOS_circuit.s#1  FOBOS_circuit.s#4  FOBOS_circuit.s#5  FOBOS_circuit.s#6  placeholder.txt
config/: acquisitionConfig.txt  acquisitionConfig.txt~  analysis.ini  aquisitionConfig.txt  compressionParams.txt  config.txt  config_template.txt  osc_config_template.txt  oscilloscope_config.txt  oscilloscope_config.txt~  projectPath.txt  sampleSpaceDispParams.txt  signalAlignmentParams.txt  traceExpungeParams.txt
control/: README.md
data/: connectiontest.txt  key_guess.txt  keys.txt  plaintexts.txt
doc/: User Instructions.docx  trigger_help.txt
doc_old/: readme.txt
docs/: readme.md
hardware/: 20 Pin Connector.ods
mem_buffer/: .gitignore
memory_buffer_latest/: DRAM.ngc  DRAM211.ngc  DRAM211.vhd  DRAM215.asy  DRAM215.ngc  DRAM215.vho  FIFO.vho  FIFO212_flist.txt  FIFO212_xmdf.tcl  FIFO214.vho  FIFO214.xco  FIFO215_xmdf.tcl  FIFO_summary.html  FIFO_xmdf.tcl  TOP.bld  (+69 more)
software/python_lib/: .gitignore  pyproject.toml  setup.cfg
software/python_lib/foboslib/: datagen.py  dummyserial.py  power.py  projmgr.py  pynqclient.py  ttestOnline.py  tvlaCalc.py
software/python_lib/foboslib/ctrl/: basys3ctrl.py  fobosctrl.py  hardware_mgr.py  pynqctrl.py
software/python_lib/foboslib/dut/: cw305dut.py  nexys4dut.py
software/python_lib/foboslib/scope/: openadc.py
(+1716 files in other folders)
