[metadata]
name = foboslib
description = FOBOS
long_description = file: README.rst
author = Abubakr Abdulgadir
author_email = aabdulga@gmu.edu
url = https://cryptography.gmu.edu/fobos/
license = Apache 2.0

[options]
packages = find:
install_requires =
    numpy>=1.23
    matplotlib~=3.5
    chipwhisperer~=5.6